--- a/data_classes/pubspec.yaml
+++ b/data_classes/pubspec.yaml
@@ -1,6 +1,6 @@
 name: data_classes
-description: Automatically generates immutable data classes for you.
-version: 1.0.0
+description: Automatically generates immutable data classes for you based on a mutable "blueprint" class.
+version: 1.0.2
 author: Marcel Garus <marcel.garus@gmail.com>
 homepage: https://github.com/marcelgarus/data_classes
 
