--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
 name: example
-description: Automatically generates immutable data classes for you based on a blueprint class.
+description: Automatically generates immutable data classes for you based on a mutable "blueprint" class.
 version: 1.0.0
 author: Marcel Garus <marcel.garus@gmail.com>
 homepage: https://github.com/marcelgarus/flutter_data_classes
@@ -7,10 +7,8 @@ homepage: https://github.com/marcelgarus/flutter_data_classes
 dependencies:
   flutter:
     sdk: flutter
-  data_classes:
-    path: ../data_classes/
+  data_classes: ^1.0.2
 
 dev_dependencies:
   build_runner: ^1.0.0
-  data_classes_generator:
-    path: ../data_classes_generator/
+  data_classes_generator: ^1.0.3
