--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,10 +5,10 @@ author: Marcel Garus <marcel.garus@gmail.com>
 homepage: https://github.com/marcelgarus/flutter_data_classes
 
 dependencies:
-  flutter:
-    sdk: flutter
-  data_classes: ^1.1.0
+  data_classes:
+    path: ../data_classes
 
 dev_dependencies:
   build_runner: ^1.0.0
-  data_classes_generator: ^1.1.1
+  data_classes_generator:
+    path: ../data_classes_generator
