--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-*.lock
+**/*.lock
+**/*.g.dart
 
 data_classes/.dart_tool
+data_classes/.packages
 data_classes_generator/.dart_tool
+data_classes_generator/.packages
 example/.dart_tool
+example/.packages
