--- a/data_classes_generator/pubspec.yaml
+++ b/data_classes_generator/pubspec.yaml
@@ -1,6 +1,6 @@
 name: data_classes_generator
 description: Automatically generates immutable data classes for you based on a mutable "blueprint" class.
-version: 2.1.0
+version: 3.0.0
 author: Marcel Garus <marcel.garus@gmail.com>
 homepage: https://github.com/marcelgarus/data_classes
 
@@ -10,8 +10,7 @@ environment:
 dependencies:
   analyzer: ">=0.27.1 <1.0.0"
   build: ">=0.12.0 <2.0.0"
-  data_classes:
-    path: ../data_classes
+  data_classes: ^3.0.0
   source_gen: ^0.9.0
 
 dev_dependencies:
