--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,10 +5,9 @@ author: Marcel Garus <marcel.garus@gmail.com>
 homepage: https://github.com/marcelgarus/flutter_data_classes
 
 dependencies:
-  data_classes:
-    path: ../data_classes
+  data_classes: ^3.0.0
+  json_serializable: ^3.2.3
 
 dev_dependencies:
   build_runner: ^1.7.1
-  data_classes_generator:
-    path: ../data_classes_generator
+  data_classes_generator: ^3.0.0
